--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ## mssql
-server.port = 8011
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url= jdbc:sqlserver://119.202.61.144:1455;databaseName=SJ_SmarTFDB
-spring.datasource.username=sa
+spring.datasource.url= jdbc:sqlserver://192.168.0.17:1455;databaseName=SJ_SmarTFDB
+spring.datasource.username=test
 spring.datasource.password=7654
 
 
